Single page message creation

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+<h1>Acebook</h1>
+
+<%= render 'form', post: @post %>
 
 <table>
   <thead>
@@ -17,7 +19,6 @@
       <tr>
         <td><%= post.message %></td>
         <td><%= post.likes_count %></td>
-        <td><%= post.image_url %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
