--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,31 +1,30 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row">
+    <div class="col text-center m-3">
+        <%= link_to "New Post", new_post_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+</div>
 
-<h1>Posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Message</th>
-      <th>Likes count</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container">
+  <div class="row">
+    <div class="col">
+        
     <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.message %></td>
-        <td><%= post.likes_count %></td>
-        <td><%= post.image_url %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
+    <div class="card">
+      <div class="card-body">
+        <%= post.message %>
+        <%= post.likes_count %>
+        <%= post.image_url %>
+        <%= link_to "Show", post %>
+        <%= link_to "Edit", edit_post_path(post) %>
+        <%= link_to "Destroy", post, method: :delete, data: { confirm: "Are you sure?" } %>
+      </div>
+    </div> 
+  <% end %>
 
-<%= link_to 'New Post', new_post_path %>
+    </div>
+  </div>
+</div>
