--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,11 +16,11 @@
   </thead>
 
   <tbody>
-    <% @posts.each do |post| %>
+    <% @posts.reverse.each do |post| %>
       <tr>
         <td><%= post.message %></td>
         <td><%= post.likes_count %></td>
-        <td>Created at: <%= post.created_at %></td> 
+        <td>Posted <%= time_ago_in_words(post.created_at) %> ago</td> 
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
