--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field">
     <%= form.label :comment_text %>
     <%= form.text_field :comment_text %>
+    <%= form.hidden_field :post_id %>
   </div>
 
   <div class="actions">
