--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create an Acebook account</h1>
 
-<%= form_with model: @user, url: sign_up_url do |form| %>
+<%= form_with(model: @user, local: true, url: sign_up_url) do |form| %>
 
 <div class="sign-up-form">
   <%= form.label :first_name %>
