Creating file upload button for images

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,9 +16,9 @@
     <%= form.text_field :message %>
   </div>
 
-  <div class="field">
-    <%= form.label :image_url %>
-    <%= form.text_field :image_url %>
+  <div class="form-group">
+    <%= form.label :pictures %>
+    <%= form.file_field :pictures %>
   </div>
 
   <div class="actions">
