--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,5 +15,15 @@
   <%= @post.image_url %>
 </p>
 
+<p>
+  <strong>Comments</strong>
+
+  <% @comments.each do |c| %>
+     <h1> <%= c.comment_text %> </h1>
+  <% end %>
+  
+</p>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path %> |
+<%= link_to 'Add Comment', new_comment_path(post_id: @post.id) %>
