--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,9 +16,9 @@
     <%= form.text_field :message %>
   </div>
 
-  <div class="form-group">
+  <div class="field">
     <%= form.label :pictures %>
-    <%= form.file_field :pictures %>
+    <%= form.file_field :pictures, multiple: true %>
   </div>
 
   <div class="actions">
