add like button and form

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,6 +11,9 @@
     </div>
   <% end %>
 
+<div class="container my-5">
+  <div class="row">
+    <div class="col">
   <div class="field">
     <%= form.label :message %>
     <%= form.text_field :message %>
@@ -25,3 +28,6 @@
     <%= form.submit %>
   </div>
 <% end %>
+    </div>
+  </div>
+</div>
