--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,3 @@
-<div class="container">
-  <div class="row">
-    <div class="col text-center m-3">
-        <%= link_to "New Post", new_post_path, class: "btn btn-primary" %>
-    </div>
-  </div>
-</div>
-
-<h1>Acebook</h1>
-
 <%= render "form", post: @post %>
 
 <div class="container">
@@ -25,6 +15,9 @@
         <%= link_to "Edit", edit_post_path(post) %></td>
         <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" } %></td>
         <%= link_to "Add Comment", new_comment_path(post_id: post.id) %>
+
+          <%= render "form2", post: @post %>
+
      </div>
     </div> 
     <% end %>
