--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col">
+    </div class="col">
+    <div class="col-6">
       <% @posts.reverse.each do |post| %>
         <div class="card text-center">
           <div class="card-body">
@@ -24,6 +26,8 @@
           </div class="card-body">
         </div class="card">
       <% end %>
+    </div class="col-6">
+    <div class="col">
     </div class="col">
   </div class="row">
 </div class="container">
