--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,6 +8,9 @@
 <p>
   <strong>Likes count:</strong>
   <%= @post.likes_count %>
+  <br>
+  <strong> User was created on:</strong>
+  <%= @post.user.created_at %>
 </p>
 
 <p>
