--- a/app/views/posts/_form2.html.erb
+++ b/app/views/posts/_form2.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @like) do |form| %>
+<%= form_with(model: like) do |form| %>
   
   <div class="field">
     <%= form.hidden_field :user_id %>
@@ -7,7 +7,5 @@
 
   <div class="actions">
     <%= form.submit "Like", class: "btn btn-primary" %>
-
-
   </div>
 <% end %>
