--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,7 @@
         <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" } %></td>
         <%= link_to "Add Comment", new_comment_path(post_id: post.id) %>
 
-          <%= render "form2", post: @post %>
+        <%= link_to "Like", post_like_path(post_id: post.id, user_id: "5"), method: :post %>
 
      </div>
     </div> 
