buttons change based on log in status (Current.user)

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,9 +31,20 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
-      <%= button_to('Sign Up', sign_up_path, method: "get") %>
-      <%= button_to('Sign In', sign_in_path, method: "get") %>
-      <%= button_to('Log Out', log_out_path, method: "delete") %>
+      
+      <% if Current.user %>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <div class="nav-link active">
+            <%= Current.user.first_name %> <%= Current.user.last_name %>
+          </div>
+        </li>
+      </ul>
+        <%= button_to('Log Out', log_out_path, method: "delete") %>
+      <% else %>
+        <%= button_to('Sign Up', sign_up_path, method: "get") %>
+        <%= button_to('Sign In', sign_in_path, method: "get") %>
+      <% end %>
     </div>
   </div>
 </nav>
