--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Likes count:</strong>
-  <%= @post.likes_count %>
+  <span><%= @post.likes.count %> <%= (@post.likes.count) == 1 ? "Like" : "Likes" %></span>
 </p>
 
 <p>
@@ -27,7 +27,6 @@
   
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %> |
-<%= link_to 'Add Comment', new_comment_path(post_id: @post.id) %>
-
+<%= link_to "Edit", edit_post_path(@post) %> |
+<%= link_to "Back", posts_path %> |
+<%= link_to "Add Comment", new_comment_path(post_id: @post.id) %>
