user can now only like once and unlike their like if their like is the only like that their like likes

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,7 +42,7 @@
       </ul>
         <%= button_to('Log Out', log_out_path, method: "delete") %>
       <% else %>
-        <%= button_to('Sign Up', sign_up_path, method: "get") %>
+        <%= button_to('Register', sign_up_path, method: "get") %>
         <%= button_to('Sign In', sign_in_path, method: "get") %>
       <% end %>
     </div>
