--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,7 +22,14 @@
             <%= link_to "Edit", edit_post_path(post), class: "card-link"  %>
             <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" },  class: "card-link"  %>
             <%= link_to "Add Comment", new_comment_path(post_id: post.id),  class: "card-link"  %>
-            <%= link_to "Like", post_likes_path(post), method: :post %>
+            
+            <% like_exists = post.likes.find { |like| like.user_id == session[:user_id]} %>
+            <% if like_exists %>
+              <%= link_to 'Unlike', post_like_path(post, like_exists), method: :delete %>
+            <% else %>
+              <%= link_to "Like", post_likes_path(post), method: :post %>
+            <% end %>
+
           </div class="card-body">
         </div class="card">
       <% end %>
