--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,32 +1,35 @@
-<%= render "form", post: @post %>
+<% if Current.user %>
+  <<%= render "form", post: @post %>
+<% end %>
+
 <div class="container">
-  <div class="row">
-    <div class="col">
-    </div class="col">
-    <div class="col-6">
-      <% @posts.reverse.each do |post| %>
-        <div class="card text-center mb-5">
-          <div class="card-body">
-            <% unless post.pictures.empty? %>
-              <% (post.pictures).each do |picture| %>
-                <%= image_tag picture, style: "width: 400px;", class: "card-img-top" %>
+    <div class="row">
+      <div class="col">
+      </div class="col">
+      <div class="col-6">
+        <% @posts.reverse.each do |post| %>
+          <div class="card text-center mb-5">
+            <div class="card-body">
+              <% unless post.pictures.empty? %>
+                <% (post.pictures).each do |picture| %>
+                  <%= image_tag picture, style: "width: 400px;", class: "card-img-top" %>
+                <% end %>
               <% end %>
-            <% end %>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title"><%= post.message%></h5>
-            <%= post.likes_count %>
-            Posted <%= time_ago_in_words(post.created_at) %> ago. 
-          </div class="card-body">
-          <div class="card-body">
-            <%= link_to "Edit", edit_post_path(post), class: "card-link"  %>
-            <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" },  class: "card-link"  %>
-            <%= link_to "Add Comment", new_comment_path(post_id: post.id),  class: "card-link"  %>
-          </div class="card-body">
-        </div class="card">
-      <% end %>
-    </div class="col-6">
-    <div class="col">
-    </div class="col">
-  </div class="row">
-</div class="container">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><%= post.message%></h5>
+              <%= post.likes_count %>
+              Posted <%= time_ago_in_words(post.created_at) %> ago. 
+            </div class="card-body">
+            <div class="card-body">
+              <%= link_to "Edit", edit_post_path(post), class: "card-link"  %>
+              <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" },  class: "card-link"  %>
+              <%= link_to "Add Comment", new_comment_path(post_id: post.id),  class: "card-link"  %>
+            </div class="card-body">
+          </div class="card">
+        <% end %>
+      </div class="col-6">
+      <div class="col">
+      </div class="col">
+    </div class="row">
+  </div class="container">
