--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,8 +4,7 @@
 
 <div class="container">
     <div class="row">
-      <div class="col">
-      </div class="col">
+      <div class="col"></div class="col">
       <div class="col-6">
         <% @posts.reverse.each do |post| %>
           <div class="card text-center mb-5">
@@ -29,7 +28,6 @@
           </div class="card">
         <% end %>
       </div class="col-6">
-      <div class="col">
-      </div class="col">
+      <div class="col"></div class="col">
     </div class="row">
   </div class="container">
