Change comment text to p

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
   <strong>Comments</strong>
 
   <% @comments.each do |c| %>
-     <h1> <%= c.comment_text %> </h1>
+     <p> <%= c.comment_text %> </p>
   <% end %>
   
 </p>
