--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,10 +2,10 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-md-6 ">
-
       <% @posts.reverse.each do |post| %>
+
         <div class="card text-center mb-5">
-          <div class="card-body">
+          <div class="card-title">
             <% unless post.pictures.empty? %>
               <% (post.pictures).each do |picture| %>
                 <%= image_tag picture, style: "width: 400px;", class: "card-img-top" %>
@@ -20,15 +20,15 @@
                 <strong>Likes count:</strong>
              <%= post.likes.count %> <%= (post.likes.count) == 1 ? "Like" : "Likes" %>
               </p>
-            <%= link_to "Edit", edit_post_path(post), class: "card-link" %>
-            <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, class: "card-link" %>
-            <%= link_to "Add Comment", new_comment_path(post_id: post.id), class: "card-link" %>
+            <%= link_to "Edit", edit_post_path(post), class: "btn btn-primary" %>
+            <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-primary" %>
+            <%= link_to "Add Comment", new_comment_path(post_id: post.id), class: "btn btn-primary" %>
             
             <% like_exists = post.likes.find { |like| like.user_id == session[:user_id] } %>
             <% if like_exists %>
-              <%= link_to "Unlike", post_like_path(post, like_exists), method: :delete %>
+              <%= link_to "Unlike", post_like_path(post, like_exists), method: :delete, class: "btn btn-primary" %>
             <% else %>
-              <%= link_to "Like", post_likes_path(post), method: :post %>
+              <%= link_to "Like", post_likes_path(post), method: :post, class: "btn btn-primary" %>
             <% end %>
 
           </div>
