--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,21 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Acebook</a>
+    <a class="navbar-brand" href="/" >Acebook</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -26,12 +16,7 @@
         <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
         </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-      
+      </ul>      
       <% if Current.user %>
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -40,10 +25,10 @@
           </div>
         </li>
       </ul>
-        <%= button_to('Log Out', log_out_path, method: "delete") %>
+        <%= button_to("Log Out", log_out_path, method: "delete") %>
       <% else %>
-        <%= button_to('Register', sign_up_path, method: "get") %>
-        <%= button_to('Sign In', sign_in_path, method: "get") %>
+        <%= button_to("Register", sign_up_path, method: "get") %>
+        <%= button_to("Sign In", sign_in_path, method: "get") %>
       <% end %>
     </div>
   </div>
