--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -28,6 +28,11 @@
 </div>
 
 <div class="sign-up-form">
+  <%= form.label :profile_photo %>
+  <%= form.file_field :profile_photo %>
+</div>
+
+<div class="sign-up-form">
   <%= form.submit 'Sign Up' %>
 </div>
 
