--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,6 +36,7 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <div class="nav-link active">
+            <%= Current.user.profile_photo %>
             <%= Current.user.first_name %> <%= Current.user.last_name %>
           </div>
         </li>
