--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <% if Current.user %>
-  <<%= render "form", post: @post %>
+  <%= render "form", post: @post %>
 <% end %>
 
 <div class="container">
