start of comments refactor

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,9 +24,10 @@
                 <strong>Likes count:</strong>
              <%= post.likes.count %> <%= (post.likes.count) == 1 ? "Like" : "Likes" %>
               </p>
+              
             <%= link_to "Edit", edit_post_path(post), class: "btn btn-primary" %>
             <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-primary" %>
-            <%= link_to "Add Comment", new_comment_path(post_id: post.id), class: "btn btn-primary" %>
+            <%= link_to "Add Comment", new_post_comment_path(post_id: post.id), class: "btn btn-primary" %>
             
             <% like_exists = post.likes.find { |like| like.user_id == session[:user_id] } %>
             <% if like_exists %>
@@ -38,6 +39,5 @@
         </div>
       <% end %>
     </div>
-    <div>
+  <div>
 </div>
-
