--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Comment</h1>
 
-<%= render 'form', comment: @comment %>
+<%= render "form", comment: @comment %>
 
-<%= link_to 'Back', @post %>
+<%= link_to "Back", @post %>
