--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <% if Current.user %>
-  <<%= render "form", post: @post %>
+  <%= render "form", post: @post %>
 <% end %>
 
 <div class="container">
@@ -24,8 +24,10 @@
                 <strong>Likes count:</strong>
              <%= post.likes.count %> <%= (post.likes.count) == 1 ? "Like" : "Likes" %>
               </p>
+            <% if Current.user %>
             <%= link_to "Edit", edit_post_path(post), class: "btn btn-primary" %>
             <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-primary" %>
+            <% end %>
             <%= link_to "Add Comment", new_comment_path(post_id: post.id), class: "btn btn-primary" %>
             
             <% like_exists = post.likes.find { |like| like.user_id == session[:user_id] } %>
