comments now visible on main page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,7 +24,9 @@
                 <strong>Likes count:</strong>
              <%= post.likes.count %> <%= (post.likes.count) == 1 ? "Like" : "Likes" %>
               </p>
-              
+            <% post.comments.each do |comm| %>
+              <p><%= comm.comment_text %></p>
+            <% end %>
             <%= link_to "Edit", edit_post_path(post), class: "btn btn-primary" %>
             <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-primary" %>
             <%= link_to "Add Comment", new_post_comment_path(post_id: post.id), class: "btn btn-primary" %>
