--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -13,7 +13,7 @@
       <tr>
         <td><%= comment.comment_text %></td>
         <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
+        <td><%= link_to 'Edit', edit_post_comment_path(comment) %></td>
         <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Comment', new_comment_path %>
+<%= link_to 'New Comment', new_post_comment_path %>
