--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,4 +28,4 @@
 
 <%= link_to "Edit", edit_post_path(@post) %> |
 <%= link_to "Back", posts_path %> |
-<%= link_to "Add Comment", new_comment_path(post_id: @post.id) %>
+<%= link_to "Add Comment", new_post_comment_path(post_id: @post.id) %>
