--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,5 +27,5 @@
 </p>
 
 <%= link_to "Edit", edit_post_path(@post) %> |
-<%= link_to "Back", posts_path %> |
+<%= link_to "Back", root_path %> |
 <%= link_to "Add Comment", new_comment_path(post_id: @post.id) %>
