--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,7 +36,7 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <div class="nav-link active">
-            <%= image_tag Current.user.display_profile_photo, style:"height:36px", class: "avatar" %>
+            <%= image_tag Current.user.display_profile_photo, class: "nav_avatar" %>
             <%= Current.user.first_name %> <%= Current.user.last_name %>
           </div>
         </li>
