--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
         <div class="card-body">
         
         <p>Posted by <%= post.user.first_name %> <%= post.user.last_name %> </p>
-          <%= image_tag post.user.display_profile_photo, style: "width: 75px;", class: "avatar" %>
+          <%= image_tag post.user.display_profile_photo, class: "post_avatar" %>
             <h5 class="card-title"><%= post.message%></h5>
             
           <div class="card-body">
