comments showing in index

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,9 +3,8 @@
 <% end %>
 
 <div class="container">
-
   <div class="row justify-content-center">
-    <div class="col-12 col-md-6 ">
+    <div class="col-12 col-md-6">
       <% @posts.reverse.each do |post| %>
         <div class="card text-center mb-5">
           <div class="card-title">
@@ -24,9 +23,28 @@
                 <strong>Likes count:</strong>
              <%= post.likes.count %> <%= (post.likes.count) == 1 ? "Like" : "Likes" %>
               </p>
-            <% post.comments.each do |comm| %>
-              <p><%= comm.comment_text %></p>
-            <% end %>
+            <div class="d-flex justify-content-center">
+                <div class="border border-secondary m-3 rounded-3 p-2" style="width: 70%">
+
+                  <% post.comments[0, 3].each do |comment, i| %>
+                      <% if comment.comment_text.length < 140 %>
+                        <p><%= comment.comment_text %></p>
+                      <% else %>
+                        <p><%= truncate(comment.comment_text, length: 140) %></p>
+                      <% end %>
+                      <hr>
+                  <% end %>
+
+                <% unless post.comments.empty? %>
+                  <%= link_to "Read all comments", post %>
+                  <% else %>
+                  <p>No comments yet!</p>
+                  <% end %>
+              </div>
+
+
+            </div>
+
             <%= link_to "Edit", edit_post_path(post), class: "btn btn-primary" %>
             <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-primary" %>
             <%= link_to "Add Comment", new_post_comment_path(post_id: post.id), class: "btn btn-primary" %>
