--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -26,7 +26,7 @@
               </p>
             <% if Current.user %>
             <%= link_to "Edit", edit_post_path(post), class: "btn btn-primary" %>
-            <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-primary" %>
+            <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-primary", id: "btnDelete" %>
             <% end %>
             <%= link_to "Add Comment", new_comment_path(post_id: post.id), class: "btn btn-primary" %>
             
@@ -40,6 +40,6 @@
         </div>
       <% end %>
     </div>
-    <div>
+  <div>
 </div>
 
