--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -15,3 +15,14 @@
   height: 100px;
   margin: 10px;
 }
+
+.align_left {
+  text-align: left;
+  padding: 15px;
+}
+
+.float_right {
+  float: right;
+  padding-top: 50px;
+  padding-right: 61%;
+}
