--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,10 +8,11 @@
       <% @posts.reverse.each do |post| %>
         <div class="card text-center mb-5">
         <div class="card-body">
-        
-        <p>Posted by <%= post.user.first_name %> <%= post.user.last_name %> </p>
-          <%= image_tag post.user.display_profile_photo, class: "post_avatar" %>
-            <h5 class="card-title"><%= post.message%></h5>
+          <div class="align_left">
+          <p class="float_right">Posted by <%= post.user.first_name %> <%= post.user.last_name %> </p>
+            <%= image_tag post.user.display_profile_photo, class: "post_avatar" %>
+              <h5 class="card-title"><%= post.message%></h5>
+        </div>
             
           <div class="card-body">
             <% unless post.pictures.empty? %>
