--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -33,7 +33,7 @@
              <%= post.likes.count %> <%= (post.likes.count) == 1 ? "Like" : "Likes" %>
               </p>
             <div class="d-flex justify-content-center">
-                <div class="border border-secondary m-3 rounded-3 p-2" style="width: 70%">
+                <div class="border border-secondary m-3 rounded-3 p-2" style="width: 70%" id="commentCard">
 
                   <% post.comments[0, 3].each do |comment, i| %>
                       <% if comment.comment_text.length < 140 %>
