--- a/app/views/user_mailer/forgot_password.html.erb
+++ b/app/views/user_mailer/forgot_password.html.erb
@@ -1,7 +1,12 @@
-<%= @greeting %> <%= @user.first_name %>, <br>
 
-To reset your password, click the URL below: <br>
+<div>
 
-<%= edit_password_reset_url(@user.password_reset_token) %> <!--This is the link to reset your password-->
+<h2><%= @greeting %> <%= @user.first_name %>,</h2> 
+
+To reset your password, click the URL below: <br><br>
+
+<a href="<%= edit_password_reset_url(@user.password_reset_token) %>">Click here to reset your password.</a> <br><br> <!--This is the link to reset your password-->
 
 If you did not request your password to be reset, just ignore this e-mail and your password will stay the same.
+
+</div>
