Updated view and controller to prevent non-author editing of posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -52,7 +52,7 @@
               </div>
             </div>
 
-            <% if Current.user %>
+            <% if Current.user == post.user %>
             <%= link_to "Edit", edit_post_path(post), class: "btn btn-primary" %>
             <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-primary", id: "btnDelete" %>
             <% end %>
