--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -36,12 +36,30 @@
                 <div class="border border-secondary m-3 rounded-3 p-2" style="width: 70%" id="commentCard">
 
                   <% post.comments.reverse[0, 3].each do |comment, i| %>
+                    
+                    
                       <% if comment.comment_text.length < 140 %>
                         <p><%= comment.comment_text %></p>
                       <% else %>
                         <p><%= truncate(comment.comment_text, length: 140) %></p>
                       <% end %>
-                      Posted by <%= comment.author %>
+                      <div class="container">
+                        <div class="row">
+                          <div class="col-3">
+                            <%= image_tag comment.user.display_profile_photo, class: "post_avatar" %>
+                          </div>
+                          <div class="col-9 text-wrap">
+                            <div class="row">
+                              Posted by <%= comment.author %>
+                            </div>
+                            <div class="row">
+                              Posted <%= time_ago_in_words(comment.created_at) %> ago.
+                            </div>
+                            
+                          </div>
+                        </div>
+                      </div>
+                        
                       <hr>
                   <% end %>
 
