--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -46,7 +46,7 @@
                       <div class="container">
                         <div class="row">
                           <div class="col-3">
-                            <%= image_tag comment.user.display_profile_photo, class: "post_avatar" %>
+                            <%= image_tag comment.user.display_profile_photo, class: "post_avatar", style: "height:3em;width:em" %>
                           </div>
                           <div class="col-9 text-wrap">
                             <div class="row">
