--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -29,3 +29,6 @@
 <%= link_to "Edit", edit_post_path(@post) %> |
 <%= link_to "Back", root_path %> |
 <%= link_to "Add Comment", new_post_comment_path(post_id: @post.id) %>
+<% if Current.user == @post.user %>
+  <%= link_to "Edit Comment", post_comment_path(post_id: @post.id) %>
+<% end %>
