--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -9,12 +9,12 @@
       </ul>
     </div>
   <% end %>
+
   <div class="container">
-    <div class="row">
-      <div class="col"></div>
+    <div class="row justify-content-center">
       <div class="col-6 text-center m-3">
         <div class="field">
-          <%= form.text_field :message, class: "form-control" %>
+          <%= form.text_field :message, class: "form-control my-2" %>
         </div>
         <br>
         <div class="field">
@@ -26,10 +26,6 @@
           <%= form.submit class: "btn btn-primary" %>
         </div>
       </div>
-      <div class="col"></div>
-  </div>
-</div>
-<% end %>
     </div>
   </div>
-</div>
+<% end %>
