--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,6 +1,5 @@
 <h1>Editing Comment</h1>
 
-<%= render 'form', comment: @comment %>
+<%= render 'form', comment: @comment, post: @post %>
 
-<%= link_to 'Show', @comment %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to 'Back', post_path(@post) %>
