--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,6 +22,13 @@
           <%= form.file_field :pictures, multiple: true, class: "btn btn-light" %>
         </div>
         <br>
+
+        <div class="field">
+          <%= form.label :upload_Video %>
+          <%= form.text_field :video_url %>
+        </div>
+       <br>
+
         <div class="actions">
           <%= form.submit class: "btn btn-primary" %>
         </div>
