--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -26,6 +26,11 @@
                   <% end %>
                 <% end %>
               </div>
+            
+              <div styles="width:400px; height:400px" >
+                  <iframe width="100%" height="auto" src="<%= video_embed(post.video_url) %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+
               <div class="card-body">
                 <%= post.likes_count %>
                 Posted <%= time_ago_in_words(post.created_at) %> ago. 
