modals and css edits

--- a/app/views/posts/_comments.html.erb
+++ b/app/views/posts/_comments.html.erb
@@ -1,41 +1,49 @@
 <div class="d-flex justify-content-left">
-  <div class="border border-secondary my-3 rounded-3 p-4 d-flex " style="width: 100%" id="commentCard">
-    <% post.comments.reverse[0, 1].each do |comment, i| %>
-      <div class="container">
-        <div class="row">
-          <div class="col-2 col-lg-1 d-flex flex-column text-center align-items-center mt-3">
-            <%= image_tag comment.user.display_profile_photo, class: "comment_avatar ms-3", style: "height:2em;width:2em" %>
-          </div>
-          <div class="col-8 col-lg-11 text-start">  
-            <% if comment.comment_text.length < 140 %>
-            <p><%= comment.comment_text %></p>
-            <% else %>
-              <p><%= truncate(comment.comment_text, length: 140) %></p>
-            <% end %>                         
-              <small>Posted by <%= comment.author %>, <%= time_ago_in_words(comment.created_at) %> ago.</small>
-          </div>
-        </div>
-      </div>       
-    <% end %>
+  <div class="border border-secondary my-3 rounded-3 p-4 d-flex" style="width: 100%" id="commentCard">
+    <%= render "display-comments", post: post %>
+
     <% unless post.comments.empty? %>
       <hr>
     <% end %>
     <div class="container">
       <div class="row">
-        <div class="col-4">
+        <div class="col">
           <% unless post.comments.empty? %>
-            <%= link_to "Read all comments [#{post.comments.count}]", post, class: "text-dark" %>
+
+          <a class="text-primary" data-bs-toggle="modal" data-bs-target="#commentModal">Read all comments [<%= post.comments.count %>]</a>
+
+          <div class="modal fade" id="commentModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+           <div class="modal-dialog modal-dialog-scrollable">
+             <div class="modal-content">
+               <div class="modal-header">
+                 <h5 class="modal-title" id="staticBackdropLabel">All Comments</h5>
+                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+               </div>
+               <div class="modal-footer d-flex justify-content-center">        
+                <%= form_for([post, Comment.new], remote: true) do |f| %>
+                <%= f.text_field :comment_text, placeholder: "Add a comment", label: false %>
+                <%= f.submit "Post Comment", class: "btn btn-dark", id: "post-submit", role: "status", remote: true, class: "btn btn-dark" %>
+                <% end %>
+               </div>
+               <div class="modal-body">
+                <%= render "display-all-comments", post: post %>
+               </div>
+             </div>
+           </div>
+         </div>
           <% else %>
-            <p>No comments yet!</p>
-          <% end %>
-        </div>
-        <div class="col-8">
-          <div>
+          <div class="d-flex">
+            <div class="col-3">
+              <p>No comments yet!</p>
+            </div>
+            <div class="col-9">
             <%= form_for([post, Comment.new], remote: true) do |f| %>
               <%= f.text_field :comment_text, placeholder: "Add a comment", label: false %>
               <%= f.submit "Post Comment", class: "btn btn-dark", id: "post-submit", role: "status", remote: true, class: "btn btn-dark" %>
             <% end %>
+            </div>
           </div>
+          <% end %>
         </div>
       </div>
     </div>
