--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -3,7 +3,7 @@
     <div class="row g-0">
       <div class="col-md-3 d-flex flex-column text-center align-items-center my-5 justify-content-center">  
         <% # Aside profile %>
-        <%= image_tag post.user.display_profile_photo, class: "post_avatar" %>
+        <%= image_tag post.user.display_profile_photo, class: "post_avatar", style: "height:5em;width:5em"  %>
           <div class="mt-2">
             <p style="font-size: 15px; margin-bottom: 0;">Posted by <%= post.user.first_name %> <%= post.user.last_name %></p>
             <small class="text-muted" style="font-size: 10px;">Posted <%= time_ago_in_words(post.created_at) %> ago.</small>
@@ -24,7 +24,23 @@
               <%= post.message %>
             <% else %>
               <%= truncate(post.message, length: 280) %>
-               <%= link_to "Continue reading", post, class: "text-dark" %>
+              <a class="text-primary" data-bs-toggle="modal" data-bs-target="#postModal">Continue reading</a>
+               <div class="modal fade" id="postModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-scrollable">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="staticBackdropLabel">Posted by <%= post.user.first_name %> <%= post.user.last_name %></h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <%= post.message %>
+                    </div>
+                    <div class="modal-footer">
+                      <%= render "card-footer", post: post %>
+                    </div>
+                  </div>
+                </div>
+              </div>
             <% end %>
           </p>
           <%= render "comments", post: post, class: "d-flex align-self-stretch" %>
