--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -43,6 +43,11 @@
               </div>
             <% end %>
           </p>
+          <% unless post.video_url.empty? %>
+          <div class="d-flex justify-content-start">
+            <iframe width="80%" height="auto" src="<%= video_embed(post.video_url) %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <% end %>
           <%= render "comments", post: post, class: "d-flex align-self-stretch" %>
         </div>
       </div>
