--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -1,9 +1,9 @@
 <% @posts.reverse.each do |post| %>
-  <div class="card mb-3">
+  <div class="card mb-3 shadow p-3 mb-5 bg-body rounded">
     <div class="row g-0">
       <div class="col-md-3 d-flex flex-column text-center align-items-center my-5 justify-content-center">  
         <% # Aside profile %>
-        <%= image_tag post.user.display_profile_photo, class: "post_avatar", style: "height:5em;width:5em"  %>
+        <%= image_tag post.user.display_profile_photo, class: "post_avatar", style: "height:5em;width:5em" %>
           <div class="mt-2">
             <p style="font-size: 15px; margin-bottom: 0;">Posted by <%= post.user.first_name %> <%= post.user.last_name %></p>
             <small class="text-muted" style="font-size: 10px;">Posted <%= time_ago_in_words(post.created_at) %> ago.</small>
@@ -13,13 +13,13 @@
       <div class="col-md-9 align-items-center">
         <div class="card-body d-flex flex-fill flex-column align-items-stretch">
         <% # Attached Picture %>
+        <div class="my-2">
           <% unless post.pictures.empty? %>
-            <% (post.pictures).each do |picture| %>
-              <%= image_tag picture, class: "card-img-top" %>
-            <% end %>
+            <%= render "images", post: post %>
           <% end %>
+          </div>
         <% # Post message %>
-          <p class="card-title my-3">
+          <p class="card-title my-3 ms-3">
             <% if post.message.length < 280 %>
               <%= post.message %>
             <% else %>
