--- a/app/views/posts/_images.html.erb
+++ b/app/views/posts/_images.html.erb
@@ -1,8 +1,8 @@
 
   <% if post.pictures.count == 1 %>
-
-      <%= image_tag post.pictures[0], class: "card-img-top" %>    
-
+  <div class="d-flex justify-content-center">
+      <%= image_tag post.pictures[0], class: "card-img-top", style: "width: auto; max-height: 300px;" %>    
+  </div>
   <% else %> 
 
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="max-height: 300px;">
